<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auto Time Helper</string>
    <string name="user_name">Anonim</string>
    <string name="drawer_open">Menu Opened</string>
    <string name="drawer_close">Menu Closed</string>
    <string name="menu_template">My page</string>
    <string name="manual_activity">Manual Activity</string>
    <string name="settings">Settings</string>
    <string name="tags">Tags</string>
    <string name="map">Map</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="stop">STOP</string>
    <string name="call">CALL</string>
    <string name="work">WORK</string>
    <string name="walk">WALK</string>
    <string name="rest">REST</string>
    <string name="textViewStartDate">textViewStartDate</string>
    <string name="textViewEndDate">textViewEndDate</string>
    <string name="duration">duration</string>
    <string name="description">Description</string>
    <string name="notification_title">AutoTimeHelper</string>
    <string name="notification_text">some message</string>
    <string name="ongoing_call_description">ongoing call</string>
    <string name="incoming_call_description">incoming call</string>
    <string name="widget_default_text">don`t change</string>
    <string name="widget_call_text">Дзвонок</string>
    <string name="call_number_widget">Из виджета</string>
    <string name="widget_walk_text">В пути</string>
    <string name="widget_work_text">Работа</string>
    <string name="widget_rest_text">Отдых</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="db_error">Ошыбка соединения</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_permissinons_not_garanted">Permissions not granted, your way not tracked</string>
    <string name="toast_logged">Logged</string>
    <string name="toast_incorrect_login_or_password">Incorrect login or password</string>
    <string name="text_dialog_location_permission">Permissions for tracking your way</string>
    <string name="toast_walk_without_path">This action don\'t have a path</string>

    <string name="action_settings">Settings</string>
    <string name="drawable_menu_month">Month</string>
    <string name="drawable_menu_week">Week</string>
    <string name="drawable_menu_day">Day</string>
    <string name="drawable_menu_group">Tools</string>
    <string name="drawable_menu_login">login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_default_description">not selected</string>
    <string name="opyion_button_edit">Edit</string>
    <string name="opyion_button_delete">Delete</string>
    <string name="opyion_button_join">Join</string>
    <string name="statistic_text">Work time:</string>
    <string name="warning_about_anonymously">You are anonymously. Please, Sign In</string>
    <string name="name_calendar_fragment">Calendar</string>
    <string name="message_wrong_date">Wrong date</string>
    <string name="no_network">No network</string>
    <string name="toast_deny_location_permission">You deny location permission, your wolk dates are not trecking now</string>
    <string name="message_deny_location_tracker">Lockation tracker turn off, your walk dates aren\'t tracking now</string>
    <string name="action_not_exist">Action is not exist</string>
    <string name="dialog_message_exit">Are you sure you want to exit?</string>
    <string name="dialog_message_logout">Are you sure you want to logout?</string>
    <string name="dialog_title_exit">Really Exit?</string>
    <string name="dialog_title_logout">Really Logout?</string>
    <string name="message_two_identical_action">you have selected two identical dates</string>
    <string name="text_default_action_state"></string>
    <string name="text_default_action_date"></string>
    <string name="error_input_data">Please input login and password</string>
    <string name="error_connecting">Please turn on internet</string>
    <string name="hour">h</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="toast_wrong_description">Wrong description</string>
    <string name="text_work_statistic">Вы проработали:</string>
    <string name="permission_camera_rationale">Для работы с камерой нужны разрешения</string>
    <string name="permission_button_allow">Открить</string>
    <string name="permission_button_deny">Отложить</string>
    <string name="permission_camera_denied">Разрешения вы можете дать при нажатии на кнопку фото</string>
    <string name="permission_neverask">Дать разрешения вы можете в настройках телефона</string>
    <string name="createhomesecond_gallery">Галерея</string>
    <string name="createhomesecond_camera">Камера</string>
    <string name="select_different_colors">Select different colors.</string>

    <string-array name="options_action">
        <item>Edit</item>
        <item>Delete</item>
        <item>Join</item>
    </string-array>
    <string-array name="options_wifi_type">
        <item>Home</item>
        <item>Work</item>
        <item>None</item>
    </string-array>
    <string-array name="options_tags">
        <item>Delete</item>
    </string-array>
</resources>