<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />

        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map"
            android:title="@string/home" />
    </group>

    <group android:id="@+id/group2">

        <item
            android:id="@+id/user"
            android:icon="@drawable/ic_person"
            android:title="@string/user" />

        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
    </group>

    <group android:id="@+id/group3">

        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>

